log
Thu, Mar 27, 2025 10:02:11 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025 10:07:59 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'createList':
list.c:32:38: error: 'Lista' undeclared (first use in this function); did you mean 'List'?
   32 |     List* L = (List *) malloc(sizeof(Lista));
      |                                      ^~~~~
      |                                      List
list.c:32:38: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
0ac0efa
Thu, Mar 27, 2025 10:08:21 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cc912ab
Thu, Mar 27, 2025 10:15:34 AM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
e95b2ca
Thu, Mar 27, 2025 10:16:49 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
500ad19
Thu, Mar 27, 2025 10:17:54 AM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
57a7b15
Thu, Mar 27, 2025 10:22:14 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
54a3c3f
Thu, Mar 27, 2025 10:24:31 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
6c7346d
Thu, Mar 27, 2025 10:26:52 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
5741bcb
Thu, Mar 27, 2025 10:28:06 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f62c9d5
Thu, Mar 27, 2025 10:29:16 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
cecbea7
Thu, Mar 27, 2025 10:31:30 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
ce0b362
Thu, Mar 27, 2025 10:32:35 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
a039f0e
Thu, Mar 27, 2025 10:35:43 AM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
35135e2
Thu, Mar 27, 2025 10:43:35 AM: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
list.c: In function 'pushFront':
list.c:65:5: error: unknown type name 'node'; did you mean 'Node'?
   65 |     node* newNodo = createNode(data);
      |     ^~~~
      |     Node
list.c:65:21: error: initialization of 'int *' from incompatible pointer type 'Node *' [-Werror=incompatible-pointer-types]
   65 |     node* newNodo = createNode(data);
      |                     ^~~~~~~~~~
list.c:67:20: error: assignment to 'Node *' from incompatible pointer type 'int *' [-Werror=incompatible-pointer-types]
   67 |         list->head = newNodo;
      |                    ^
list.c:70:5: error: unknown type name 'node'; did you mean 'Node'?
   70 |     node* anterior = list->head->next;
      |     ^~~~
      |     Node
list.c:70:22: error: initialization of 'int *' from incompatible pointer type 'Node *' [-Werror=incompatible-pointer-types]
   70 |     node* anterior = list->head->next;
      |                      ^~~~
list.c:71:13: error: request for member 'prev' in something not a structure or union
   71 |     anterior->prev = newNodo;
      |             ^~
list.c:72:12: error: request for member 'next' in something not a structure or union
   72 |     newNodo->next = anterior;
      |            ^~
list.c:73:22: error: assignment to 'Node *' from incompatible pointer type 'int *' [-Werror=incompatible-pointer-types]
   73 |     list->head->next = newNodo;
      |                      ^
cc1.exe: all warnings being treated as errors
Compilation failed
438f0e5
Thu, Mar 27, 2025 10:44:29 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
3e03d2c
Thu, Mar 27, 2025 10:45:32 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
7b8dd03
Thu, Mar 27, 2025 10:47:46 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
9b9c403
Thu, Mar 27, 2025  9:05:09 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
c16083b
Thu, Mar 27, 2025  9:39:34 PM: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:
list.c: In function 'pushCurrent':
list.c:83:5: error: unknown type name 'node'; did you mean 'Node'?
   83 |     node* newNodo = createNode(data);
      |     ^~~~
      |     Node
list.c:83:21: error: initialization of 'int *' from incompatible pointer type 'Node *' [-Werror=incompatible-pointer-types]
   83 |     node* newNodo = createNode(data);
      |                     ^~~~~~~~~~
list.c:85:29: error: assignment to 'Node *' from incompatible pointer type 'int *' [-Werror=incompatible-pointer-types]
   85 |         list->current->next = newNodo;
      |                             ^
list.c:86:20: error: assignment to 'Node *' from incompatible pointer type 'int *' [-Werror=incompatible-pointer-types]
   86 |         list->tail = newNodo;
      |                    ^
list.c:89:5: error: unknown type name 'node'; did you mean 'Node'?
   89 |     node* pos = list->current->next;
      |     ^~~~
      |     Node
list.c:89:17: error: initialization of 'int *' from incompatible pointer type 'Node *' [-Werror=incompatible-pointer-types]
   89 |     node* pos = list->current->next;
      |                 ^~~~
list.c:90:8: error: request for member 'prev' in something not a structure or union
   90 |     pos->prev = newNodo;
      |        ^~
list.c:91:12: error: request for member 'next' in something not a structure or union
   91 |     newNodo->next = pos;
      |            ^~
list.c:92:25: error: assignment to 'Node *' from incompatible pointer type 'int *' [-Werror=incompatible-pointer-types]
   92 |     list->current->next = newNodo;
      |                         ^
list.c:93:12: error: request for member 'prev' in something not a structure or union
   93 |     newNodo->prev = list->current;
      |            ^~
cc1.exe: all warnings being treated as errors
Compilation failed
5c9d5cd
Thu, Mar 27, 2025  9:40:04 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
809eb27
Thu, Mar 27, 2025  9:43:11 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
65e7fce
Thu, Mar 27, 2025  9:57:28 PM: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
list.c: In function 'popCurrent':
list.c:113:9: error: expected expression before 'return'
  113 |         return eliminado;
      |         ^~~~~~
list.c:109:15: error: unused variable 'eliminado' [-Werror=unused-variable]
  109 |         void* eliminado = list->current->data;
      |               ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
18f817c
Thu, Mar 27, 2025  9:58:02 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
9905c53
Thu, Mar 27, 2025 10:16:32 PM: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
87cc35b
Thu, Mar 27, 2025 10:18:02 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
25b4eb9
Thu, Mar 27, 2025 10:36:52 PM: 
 list.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function 'popCurrent':
list.c:109:21: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'list'
  109 |     void* eliminado list->current->data;
      |                     ^~~~
list.c:109:34: error: statement with no effect [-Werror=unused-value]
  109 |     void* eliminado list->current->data;
      |                     ~~~~~~~~~~~~~^~~~~~
list.c:114:16: error: 'eliminado' undeclared (first use in this function)
  114 |         return eliminado;
      |                ^~~~~~~~~
list.c:114:16: note: each undeclared identifier is reported only once for each function it appears in
list.c:130:1: error: control reaches end of non-void function [-Werror=return-type]
  130 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
ff5e068
Thu, Mar 27, 2025 10:37:27 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
cef17ac
Thu, Mar 27, 2025 10:38:20 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|0
total_score: 70/70
5123afb
Thu, Mar 27, 2025 11:03:51 PM: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'pushCurrent':
list.c:83:55: error: 'return' with a value, in function returning void [-Werror=return-type]
   83 |     if (list == NULL || list->current == NULL) return NULL;
      |                                                       ^~~~
list.c:82:6: note: declared here
   82 | void pushCurrent(List * list, void * data) {
      |      ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
67d91e3
Thu, Mar 27, 2025 11:04:39 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 60/70
d2c745f
